<resources>
    <string name="app_name">ScrollLayout</string>
    <string name="Butn1">Button1</string>
    <string name="Butn2">Button2</string>
    <string name="Butn3">Button3</string>
    <string name="Butn4">Button4</string>
    <string name="Butn5">Button5</string>
    <string name="Butn6">Button6</string>
    <string name="Butn7">Button7</string>
    <string name="Butn8">Button8</string>
    <string name="Butn9">Button9</string>
    <string name="Butn10">Button10</string>



</resources>
