<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="horizontal"
    tools:context="com.example.lenovo.scrolllayout.MainActivityScroll">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


      <Button
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/Butn10"
          android:background="#3F51B5"
          android:layout_gravity="center"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Butn1"
            android:background="#FF4081"
            android:layout_gravity="center"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Butn2"
            android:background="#000080"
            android:layout_gravity="center"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Butn3"
            android:background="#FFD700"
            android:layout_gravity="center"/>
        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            android:text="@string/Butn4"
            android:background="#00FFFF"
            android:layout_gravity="center"/>
        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            android:text="@string/Butn5"
            android:background="#808080"
            android:layout_gravity="center"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Butn6"
            android:background="#FFCC0000"
            android:layout_gravity="center"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Butn7"
            android:background="#FFFFBB33"
            android:layout_gravity="center"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Butn8"
            android:background="#BC8F8F"
            android:layout_gravity="center"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Butn9"
            android:background="#FF99CC00"
            android:layout_gravity="center"
            />


    </LinearLayout>


</HorizontalScrollView>
